[package]
name = "world-host-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.0"
argparse = "0.2"
tokio-tungstenite = "0.18"
tokio = { version = "1.25", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
tungstenite = "0.18"
uuid = { version = "1.3", features = ["v4"] }
